GN-95 Z-index for pathways and guidance fix

--- a/src/Header/Nav/NavLinks/NavLinks.module.scss
+++ b/src/Header/Nav/NavLinks/NavLinks.module.scss
@@ -21,7 +21,7 @@ button.link {
   left: 0;
   position: relative;
   width: 100%;
-  z-index: 1;
+  z-index: 999; // NOTE Need to standardise z-indexes!
 
   &.active {
     display: block;
